<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TimeTable</string>
    <string name="about">About</string>
    <string name="update_data">Update</string>
    <string name="sent_through_bluetooth">Sent</string>
    <string name="edit_table">Edit</string>
    <string name="settings">Settings</string>
    <string name="update_from_site">Update</string>
    <string name="update_from_memory">Find</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="new_file" translatable="false">Name of file</string>
    <string name="add" translatable="false">New file</string>
    <string name="saved">have been saved</string>
    <string name="help">Help</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="notify">Alarm</string>
    <string name="update_service">Notification</string>
    <string name="lesson">lesson</string>

    <string name="share_file">Share file</string>
    <string name="loading">loading...</string>
    <string name="setting_uri">Sites settings</string>
    <string name="about_text" translatable="false">В детстве ходим за истиной к учителям,\nПосле — ходят за истиной к нашим дверям.\nГде же истина? Мы появились из капли,\nСтанем — ветром, Вот смысл этой сказки, Хайям!</string>
    <string name="no_connection">No Internet connection</string>
    <string name="notification">Notification before lesson</string>

    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>

    <string name="mon">Monday</string>
    <string name="tues">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="alarm_help">To notify before first lesson and set time of lessons</string>
    <string name="time_of_lessons">Setting time of lessons:</string>
    <string name="update_state">Notification of Update TimeTable</string>
    <string name="exit">Exit</string>
    <string name="minute">minute</string>

    <string-array name="update_period">
        <item>hour</item>
        <item>3 hour</item>
        <item>6 hour</item>
        <item>12 hour</item>
        <item>A day</item>
    </string-array>
    <string name="university">Schools:</string>
    <string name="faculty">Faculty:</string>
    <string name="group">Group:</string>
    <string name="monday" translatable="false">MON</string>
    <string name="tuesday" translatable="false">TUE</string>
    <string name="wednesday" translatable="false">WED</string>
    <string name="thursday" translatable="false">THU</string>
    <string name="friday" translatable="false">FRI</string>
    <string name="saturday" translatable="false">SAT</string>
    <string name="room">room</string>
    <string name="failed">Error</string>

    <string-array name="week">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

</resources>
