<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setting.TimerForLesson"
    android:id="@+id/main_layout">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_help"
        android:padding="8dp"
        android:id="@+id/help_notify"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:id="@+id/checkbox_state"
        android:padding="4dp"
        android:layout_below="@+id/help_notify"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/top_view"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/checkbox_state">


        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_picker"
            android:layout_gravity="center_vertical"
            android:padding="8dp">
        </NumberPicker>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="8dp"
            android:textSize="18sp"
            android:text="@string/minute"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time_of_lessons"
        android:padding="8dp"
        android:id="@+id/help_text"
        android:layout_below="@+id/top_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/help_text"
        android:layout_above="@+id/save_button">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_view_lesson">

        </ListView>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/save_button"/>

</RelativeLayout>
